--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-bin/*
-/ClockworkUI/workspace/.metadata
+/ClockworkUI/workspace/.metadata/
+/ClockworkUI/workspace/ClockworkGUI/.settings/
+/ClockworkUI/workspace/ClockworkGUI/.classpath
+/ClockworkUI/workspace/ClockworkGUI/.project
+/ClockworkUI/workspace/ClockworkGUI/bin/
