--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /ClockworkUI/workspace/ClockworkGUI/.classpath
 /ClockworkUI/workspace/ClockworkGUI/.project
 /ClockworkUI/workspace/ClockworkGUI/bin/
+/bin/
