--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry exported="true" kind="lib" path="lib/natty-0.10.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-3.5.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gunit-3.5.2.jar"/>
@@ -11,5 +10,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.7.10.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="lib" path="lib/gson-2.3.1.jar" sourcepath="lib/gson-2.3.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
