--- a/main-master/.classpath
+++ b/main-master/.classpath
@@ -11,5 +11,17 @@
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.7.10.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="lib" path="lib/gson-2.3.1.jar" sourcepath="lib/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/antlr-runtime-3.5.2.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/gson-gson-2.3.1.zip"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/gunit-3.5.2.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/ical4j-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/joda-time-2.7.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/natty-0.10.1.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/slf4j-api-1.7.10.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/slf4j-api-1.7.18.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/slf4j-simple-1.7.10.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/DEV/uiwork-cs2103/main/ClockWork/lib/slf4j-simple-1.7.18.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
