--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/gson-2.3.1.jar" sourcepath="lib/gson-2.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.18.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.18.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Rebekah/Documents/Clockwork/lib/controlsfx-8.40.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
