FontAwesome icons works offline now too

--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.18.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.18.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Rebekah/Documents/Clockwork/lib/controlsfx-8.40.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Rebekah/Documents/Clockwork/lib/fontawesomefx-8.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
