--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry exported="true" kind="lib" path="lib/natty-0.10.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-3.5.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gunit-3.5.2.jar"/>
@@ -13,5 +12,19 @@
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.18.jar"/>
 	<classpathentry kind="lib" path="lib/controlsfx-8.40.10.jar"/>
 	<classpathentry kind="lib" path="lib/fontawesomefx-8.9.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/antlr-runtime-3.5.2.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/framework.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/gson-2.3.1 2.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/gson-gson-2.3.1.zip"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/gunit-3.5.2.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/ical4j-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/joda-time-2.7.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/natty-0.10.1.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/slf4j-api-1.7.10.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/slf4j-api-1.7.18.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/slf4j-simple-1.7.10.jar"/>
+	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/slf4j-simple-1.7.18.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
