--- a/.classpath
+++ b/.classpath
@@ -12,19 +12,6 @@
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.18.jar"/>
 	<classpathentry kind="lib" path="lib/controlsfx-8.40.10.jar"/>
 	<classpathentry kind="lib" path="lib/fontawesomefx-8.9.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/antlr-runtime-3.5.2.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/framework.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/gson-2.3.1 2.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/gson-2.3.1.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/gson-gson-2.3.1.zip"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/gunit-3.5.2.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/ical4j-1.0.2.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/joda-time-2.7.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/natty-0.10.1.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/slf4j-api-1.7.10.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/slf4j-api-1.7.18.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/slf4j-simple-1.7.10.jar"/>
-	<classpathentry kind="lib" path="/Users/mjhowell/Dropbox/self/slf4j-simple-1.7.18.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
